# Kacassonne

./: .gitignore  Bugs  CMakeLists.txt  CMakeSettings.json  INSTALL.txt  ReadMe.txt  TODO  broker.cpp  dpiaware.manifest
data/: Count.txt
data/cards/: asdf.txt  basegame.txt  card_data.json  create_cardjson.py  default.txt
docker/: Dockerfile  build.sh  start_docker_build.sh
forms/: Carcasonne.fbp  ConnectDialog.fbp  ConnectDialog_B.cpp  ConnectDialog_B.h  GameDialog.fbp  GameDialog_B.cpp  GameDialog_B.h  HelpDialog.fbp  HelpDialog_B.cpp  HelpDialog_B.h  HostDialog.fbp  HostDialog_B.cpp  HostDialog_B.h  IdsDialog.fbp  IdsDialog_B.cpp  IdsDialog_B.h  LobbyDialog.fbp  LobbyDialog_B.cpp  LobbyDialog_B.h  MainFrame_B.cpp  MainFrame_B.h  PointEntryDialog.fbp  PointEntryDialog_B.cpp  PointEntryDialog_B.h  PointHistory.fbp  PointHistory_B.cpp  PointHistory_B.h  ReconnectDialog.fbp  ReconnectDialog_B.cpp  ReconnectDialog_B.h  SettingsWindow.fbp  SettingsWindow_B.cpp  SettingsWindow_B.h  StatisticsWindow.fbp  StatisticsWindow_B.cpp  StatisticsWindow_B.h
include/: Card.h  ConnectDialog.h  Connection.h  Flare.h  Game.h  GameDialog.h  HostDialog.h  IdsDialog.h  LobbyDialog.h  MainFrame.h  Message.h  Player.h  PointEntryDialog.h  PointGroup.h  PointHistoryWindow.h  ReconnectDialog.h  SettingsWindow.h  Stack.h  StatisticsWindow.h  Stone.h  TablePanel.h  main.h
src/: Card.cpp  Connection.cpp  Game.cpp  GameDialog.cpp  HostDialog.cpp  LobbyDialog.cpp  MainFrame.cpp  Message.cpp  Player.cpp  PointEntryDialog.cpp  PointGroup.cpp  PointHistoryWindow.cpp  ReconnectDialog.cpp  SettingsWindow.cpp  Stack.cpp  StatisticsWindow.cpp  Stone.cpp  TablePanel.cpp  main.cpp
